tests/reference/run-array_bounds_check_14-8de1244.stderr
runtime error: Argument 1 of subroutine f_integer_4_____0 is unallocated.
  --> tests/errors/array_bounds_check_14.f90:16:12
   |
16 |     call f(x)
   |            ^^ 
